--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -33,4 +33,8 @@
     box-decoration-break: clone;
     white-space: initial;
   }
+
+  .cta {
+    @apply py-1 px-2 mx-2 border-2 text-white bg-black underline font-black uppercase text-sm;
+  }
 }
